syntax = "proto3";

package Contracts.Abstractions.Protobuf;

import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";

message GetResponse{
  oneof OneOf{
    google.protobuf.Any Projection = 1;
    NotFound NotFound = 2;
  }
}

message ListResponse{
  oneof OneOf{
    PagedResult PagedResult = 1;
    NoContent NoContent = 2;
  }
}

message PagedResult{
  repeated google.protobuf.Any Projections = 1;
  Page page = 2;
}

message Page{
  int32 Current = 1;
  int32 Size = 2;
  bool HasNext = 3;
  bool HasPrevious = 4;
}

message NoContent {}

message NotFound {}

message Paging {
  google.protobuf.Int32Value Limit = 1;
  google.protobuf.Int32Value Offset = 2;
}

message Money{
  string Amount = 1;
  string Currency = 2;
}

message Product {
  string Description = 1;
  string Name = 2;
  string Brand = 4;
  string Category = 5;
  string Unit = 6;
  string Sku = 7;
}

message Address {
  string Street = 1;
  string City = 2;
  string State = 3;
  string ZipCode = 4;
  string Country = 5;
  google.protobuf.Int32Value Number = 6;
  google.protobuf.StringValue Complement = 7;
}

// Payment

message PaymentOption {
  oneof OneOf{
    CreditCard CreditCard = 1;
    DebitCard DebitCard = 2;
    PayPal PayPal = 3;
  }
}

message CreditCard{
  string ExpirationDate = 1;
  string Number = 2;
  string HolderName = 3;
  sint32 SecurityCode = 4;
}

message DebitCard{
  string ExpirationDate = 1;
  string Number = 2;
  string HolderName = 3;
  sint32 SecurityCode = 4;
}

message PayPal{
  string Email = 1;
}

// Notifications

message NotificationOption {
  oneof option {
    Email email = 1;
    Sms sms = 2;
    PushMobile pushMobile = 3;
    PushWeb pushWeb = 4;
  }
}

message Email {
  string Address = 1;
}

message Sms {
  string Number = 1;
}

message PushWeb {
  string UserId = 1;
}

message PushMobile {
  string DeviceId = 1;
}